[gd_scene load_steps=8 format=3 uid="uid://dphok43ulr4dg"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_x5wea"]
[ext_resource type="Script" uid="uid://det4eipc3r515" path="res://addons/CustomControls/Dialogs/select_relationship_level_dialog.gd" id="2_x5wea"]
[ext_resource type="PackedScene" uid="uid://1uibymv4bb3j" path="res://addons/CustomControls/custom_line_edit.tscn" id="3_xicnh"]
[ext_resource type="PackedScene" uid="uid://bj48rsidmna6s" path="res://addons/CustomControls/custom_spin_box.tscn" id="4_1qnrv"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="5_jyfds"]

[sub_resource type="Gradient" id="Gradient_vvvrv"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ykjfa"]
gradient = SubResource("Gradient_vvvrv")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[node name="SelectRelationshipLevelDialog" type="Window"]
oversampling_override = 1.0
title = "RelationShip Level"
position = Vector2i(0, 36)
size = Vector2i(640, 215)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_x5wea")
script = ExtResource("2_x5wea")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ykjfa")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Current Level Name:"

[node name="LevelName" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_xicnh")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Name used to identify this level"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 12

[node name="Lavel3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Experience Required to Masterized level:"

[node name="ExperienceToMasterize" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_1qnrv")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Base experience required to master this level. Once mastered, the relationship level with this NPC will increase to the next one on the list."
min_value = 1.0
value = 1.0
allow_greater = true

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 12

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 2

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("5_jyfds")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("5_jyfds")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
text = "CANCEL"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/LevelName" to="." method="_on_level_name_text_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/ExperienceToMasterize" to="." method="_on_experience_to_masterize_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
